labs/lab1/testsuite/bad/bad124.cc
int main() {
	do { int x = 1; } while (4 == 5) { return 1 }
}
